[gd_scene load_steps=12 format=4 uid="uid://bap3qogi5vb86"]

[ext_resource type="PackedScene" uid="uid://buhu7tmsbjtc6" path="res://Prefab/TowerDefense/Character/TowerDefenseZombie.tscn" id="1"]
[ext_resource type="Script" uid="uid://bbqvvroi3cfon" path="res://Asset/Anime/Character/Zombie/Chapter2/YetiDigger/Scene/TowerDefenseZombieYetiDigger.gd" id="2"]
[ext_resource type="Resource" uid="uid://c8fjq4ufduh6f" path="res://Asset/Anime/Character/Zombie/Chapter2/YetiDigger/Config/TowerDefenseZombieYetiDigger.tres" id="3"]
[ext_resource type="Resource" uid="uid://c1dvshopk6sci" path="res://Asset/Anime/Character/Zombie/Chapter2/YetiDigger/DamagePoint/Config/ZombieYetiDiggerDamagePointArm.tres" id="4"]
[ext_resource type="Resource" uid="uid://47gnlpwqey4q" path="res://Asset/Anime/Character/Zombie/Chapter2/YetiDigger/DamagePoint/Config/ZombieYetiDiggerDamagePointHead.tres" id="5"]
[ext_resource type="Resource" uid="uid://cxgw5kwsyqgio" path="res://Asset/Anime/Character/Zombie/Chapter2/YetiDigger/Armor/Config/ZombieYetiDiggerArmorHardHat.tres" id="6"]
[ext_resource type="Resource" uid="uid://dmlyr13jwd1ph" path="res://Asset/Anime/Character/Zombie/Chapter2/YetiDigger/Armor/Config/ZombieYetiDiggerArmorPick.tres" id="7"]
[ext_resource type="PackedScene" uid="uid://djpaatp5h7ubu" path="res://Asset/Anime/Character/Zombie/Chapter2/YetiDigger/ZombieYetiDigger.tscn" id="8"]
[ext_resource type="Texture2D" uid="uid://cjcrpsdfy23k3" path="res://Asset/Texture/Character/Armor/HardHat/ZombieHardHat1.png" id="9"]
[ext_resource type="Script" uid="uid://domu0k4tfig2c" path="res://addons/godot_state_charts/atomic_state.gd" id="10"]
[ext_resource type="Script" uid="uid://bnuagwct5sv5y" path="res://addons/godot_state_charts/transition.gd" id="11"]

[node name="TowerDefenseZombieYetiDigger" node_paths=PackedStringArray("sprite", "headSlot") instance=ExtResource("1")]
script = ExtResource("2")
walkSpeedScale = 0.25
inSwimAnimeClip = ""
outSwimAnimeClip = ""
config = ExtResource("3")
sprite = NodePath("SpriteGroup/TransformPoint/ZombieYetiDigger")
headSlot = NodePath("SpriteGroup/TransformPoint/ZombieYetiDigger/HeadSlot")
damagePart = {
"Arm": ExtResource("4"),
"HardHat": ExtResource("6"),
"Head": ExtResource("5"),
"Pick": ExtResource("7")
}
PreviewDamagePointPersontage = 1.0
Armor = ["HardHat", "Pick"]
DamagePartSlot/Arm = NodePath("SpriteGroup/TransformPoint/ZombieYetiDigger/ArmSlot")
DamagePartSlot/Head = NodePath("SpriteGroup/TransformPoint/ZombieYetiDigger/HeadSlot")
DamagePartSlot/HardHat = NodePath("SpriteGroup/TransformPoint/ZombieYetiDigger/HardHatSlot")
DamagePartSlot/Pick = NodePath("SpriteGroup/TransformPoint/ZombieYetiDigger/PickSlot")

[node name="SpriteMask" parent="SpriteGroup" index="0"]
offset_top = -101.0

[node name="TransformPoint" parent="SpriteGroup" index="1"]
position = Vector2(12, 33)

[node name="ZombieYetiDigger" parent="SpriteGroup/TransformPoint" index="0" node_paths=PackedStringArray("layerSlot") instance=ExtResource("8")]
position = Vector2(-12, -33)
trueFrameRate = 30.0
layerSlot = [NodePath("GroundSlot"), null, NodePath("PickSlot"), null, null, null, null, null, null, null, null, null, null, null, NodePath("HeadSlot"), null, null, null, null, null, NodePath("ArmSlot"), NodePath("HardHatSlot"), null, null, null]
Animation/LayerVisible/AnimeClips = false
Animation/MediaReplace/Zombie_digger_hardhat.png = ExtResource("9")

[node name="HeadSlot" parent="SpriteGroup/TransformPoint/ZombieYetiDigger" index="0"]
position = Vector2(-8.8406, -67.0437)

[node name="ArmSlot" parent="SpriteGroup/TransformPoint/ZombieYetiDigger" index="1"]
position = Vector2(28.1383, -9.75418)
rotation = 0.0630585
scale = Vector2(0.719841, 0.719841)

[node name="HardHatSlot" parent="SpriteGroup/TransformPoint/ZombieYetiDigger" index="2"]
position = Vector2(-4.20066, -93.886)

[node name="PickSlot" parent="SpriteGroup/TransformPoint/ZombieYetiDigger" index="3"]
position = Vector2(-37.3571, -12.7143)

[node name="CollisionShape2D" parent="HitBox" index="0"]
position = Vector2(4, -2)

[node name="GroundMoveComponent" parent="." index="8" node_paths=PackedStringArray("groundNode")]
groundNode = NodePath("../SpriteGroup/TransformPoint/ZombieYetiDigger/GroundSlot")

[node name="Dig" type="Node" parent="StateChart/CompoundState" index="6"]
script = ExtResource("10")

[node name="Drill" type="Node" parent="StateChart/CompoundState" index="7"]
script = ExtResource("10")

[node name="Land" type="Node" parent="StateChart/CompoundState" index="8"]
script = ExtResource("10")

[node name="ToDig" type="Node" parent="StateChart/CompoundState" index="15"]
script = ExtResource("11")
to = NodePath("../Dig")
event = &"ToDig"
delay_in_seconds = "0.0"

[node name="ToDrill" type="Node" parent="StateChart/CompoundState" index="16"]
script = ExtResource("11")
to = NodePath("../Drill")
event = &"ToDrill"
delay_in_seconds = "0.0"

[node name="ToLand" type="Node" parent="StateChart/CompoundState" index="17"]
script = ExtResource("11")
to = NodePath("../Land")
event = &"ToLand"
delay_in_seconds = "0.0"

[connection signal="state_entered" from="StateChart/CompoundState/Dig" to="." method="DigEntered"]
[connection signal="state_exited" from="StateChart/CompoundState/Dig" to="." method="DigExited"]
[connection signal="state_physics_processing" from="StateChart/CompoundState/Dig" to="." method="DigProcessing"]
[connection signal="state_entered" from="StateChart/CompoundState/Drill" to="." method="DrillEntered"]
[connection signal="state_exited" from="StateChart/CompoundState/Drill" to="." method="DrillExited"]
[connection signal="state_physics_processing" from="StateChart/CompoundState/Drill" to="." method="DrillProcessing"]
[connection signal="state_entered" from="StateChart/CompoundState/Land" to="." method="LandEntered"]
[connection signal="state_exited" from="StateChart/CompoundState/Land" to="." method="LandExited"]
[connection signal="state_physics_processing" from="StateChart/CompoundState/Land" to="." method="LandProcessing"]

[editable path="SpriteGroup/TransformPoint/ZombieYetiDigger"]
